# Changelog

## Not releases

### Security

- Refuse to scrub into symlinked output files or move originals onto symlink targets

## 0.7.2 - 2025-11-03

### Security

- Hardened manual-mode path handling to keep CLI inputs confined to `/photos`
- Added regression tests exercising container breakout attempts
- Reject symlinked JPEGs in manual and auto flows to block host-path traversal
- Refuse to scrub into symlinked output files or move originals onto symlink targets

### Fixed

- Auto mode no longer crashes when `--delete-original` removes the source before moving to `/photos/processed`
- Preview mode now closes temporary files before copying so Windows runs succeed

## 0.7.1 - 2025-11-02

### Added

- New `--state-file` CLI option to override `SCRUBEXIF_STATE`
- Documentation split: short README + full `doc/DETAILS.md`
- Added summary tests validating state-file override logic
- Added `SCRUBEXIF_AUTOBUILD` explanation + behavior matrix

### Improved

- Default read-only container path resolution for state file
- Test suite reliability for auto-mode stability logic
- Soak-test framework (not run by default)
- Log messages for state disable, override, and fallback

### Fixed

- `run_container()` regression from state-file refactor
- Stability path resolution in `main()` flow
- Minor path sanitization and quoting issues
- README truncation on Docker Hub due to length

### Notes

- This release tightens container behavior and test rigor
- Full documentation moved to `doc/DETAILS.md` for clarity
- Recommended upgrade for automation users

## 0.7.0 — 2025-11-01

### Added

- Full container-integration test suite using shared `_docker.py` harness
- Soak test script with real JPEG inputs to validate long-run stability
- Automatic “final flush” option for soak scenario to clear pending files
- Persistent stability-window behavior across test and soak runs
- Support for mounting processed and errors dirs in tests

### Improved
